finished bronze challenge, still need to do silver and gold.

--- a/03_objectsMethodsFundamentals/03_objectsMethodsFundamentals/03_objectsMethodsFundamentals.csproj
+++ b/03_objectsMethodsFundamentals/03_objectsMethodsFundamentals/03_objectsMethodsFundamentals.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Donut.cs" />
+    <Compile Include="hotel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
